{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Movement",
            "id": "fc97079d-58a0-4027-bb89-4007fb758461",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "18acf59d-4a6e-40e5-9a7f-68d5ff1ed84a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "9dacb6a0-1ead-4f7a-bc66-fdbbfef0e17b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "00052402-095f-4ce8-8d4d-78904122d7b4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ef3fdce0-a6f1-42ba-8c4a-5a4c03a7cc9e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "59e18107-2303-4aa2-8a9d-a11d7e24e9ef",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "10cf29d9-285d-4c2c-b677-c8596a91d268",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Notebook",
            "id": "83fd1c29-7843-4965-80fd-dcd4f2bfd4a6",
            "actions": [
                {
                    "name": "LeftPageTurn",
                    "type": "Button",
                    "id": "62c897a9-191d-468f-8586-e4408e301e4f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightPageTurn",
                    "type": "Button",
                    "id": "8655577f-27af-4ab6-8d73-8dceb2e170a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1d3dd2e7-a8a6-4bb7-8255-5c9482554f48",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPageTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50c4ae17-6ce0-4c01-a2c2-577eef566e14",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPageTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SpellCasting",
            "id": "f95ab6f5-594d-4323-8c6c-484d58818010",
            "actions": [
                {
                    "name": "SpellUp",
                    "type": "Button",
                    "id": "1a86b435-1d80-4d07-ab02-e7ce626f0ffd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpellDown",
                    "type": "Button",
                    "id": "ea090755-3356-4dbe-aecc-dc57887acd12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpellLeft",
                    "type": "Button",
                    "id": "a09748e0-b701-4fa6-8420-c48e9db0be7f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpellRight",
                    "type": "Button",
                    "id": "1ef534e0-f203-4343-81b3-a2ce150b2485",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8c0836c2-5367-446e-81aa-21e5e8c1b0d2",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpellUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78222db1-9aca-4ada-95a7-cafe324b2697",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpellDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8004a608-ff22-4429-8be6-edc06147ec32",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpellLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5303fd9-9705-4e78-8c2b-5448e1b178fb",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpellRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Triggers",
            "id": "eeb1887e-71b4-4039-9e99-6b60db25f988",
            "actions": [
                {
                    "name": "SpellcastingModeToggle",
                    "type": "Button",
                    "id": "1c0c138c-c55a-41d5-8720-1c3c5633c248",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NotebookModeToggle",
                    "type": "Button",
                    "id": "36b6f78a-41c3-48b4-a315-a8082cf704bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractionAttempt",
                    "type": "Button",
                    "id": "1679b6f3-402d-4049-b063-d9d3f9b32b26",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e957c935-892e-423b-95ca-d816bee91526",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpellcastingModeToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b71d8d7d-56a1-4576-ada4-b20444afa221",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NotebookModeToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8a49789-0026-4abe-b478-d3eb3781d3a5",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractionAttempt",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}